# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/common_event_service/event.gni")
import("//build/ohos.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "servicefinishreceiver_fuzzer:ServiceFinishReceiverFuzzTest",
    "servicefreezeandunfreeze_fuzzer:ServiceFreezeAndUnfreezeFuzzTest",
    "servicepublishcommonevent_fuzzer:ServicePublishCommonEventFuzzTest",
    "servicestickycommonevent_fuzzer:ServiceStickyCommonEventFuzzTest",
    "servicesubscribecommonevent_fuzzer:ServiceSubscribeCommonEventFuzzTest",
    "serviceunsubscribecommonevent_fuzzer:ServiceUnsubscribeCommonEventFuzzTest",
  ]

  if (build_variant == "root") {
    deps += [ "servicedumpstate_fuzzer:ServiceDumpStateFuzzTest" ]
  }
}
