# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/common_event_service/event.gni")
import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

cflags = [
  "-fno-math-errno",
  "-fno-unroll-loops",
  "-fmerge-all-constants",
  "-fno-ident",
  "-Oz",
  "-flto",
  "-ffunction-sections",
  "-fdata-sections",
]

config("native_module_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("ani_commoneventmanager") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "${interfaces_path}/kits/ani/common_event/include",
    "${ces_core_path}/include",
  ]

  configs = [ ":native_module_config" ]

  sources = [ "src/ani_common_event.cpp" ]

  deps = [ "${ces_native_path}:cesfwk_innerkits" ]

  external_deps = [
    "ability_base:want",
    "hilog:libhilog",
    "runtime_core:ani",
  ]

  subsystem_name = "notification"
  part_name = "common_event_service"
}

generate_static_abc("common_event_abc") {
  arktsconfig =
      "${interfaces_path}/kits/ani/common_event/common_event_config.json"
  dst_file = "$target_out_dir/ability_delegator.abc"
  out_puts = [ "$target_out_dir/ability_delegator.abc" ]

  #is_boot_abc = "True"
  #device_dst_file = "system/framework/ability_delegator.abc"
}
